# algos-template

./: .gitignore  MODULE.bazel  Makefile  README.md  WORSPACE.bazel  bazel-algos-template  bazel-bin  bazel-out  bazel-testlogs
cpp/0001/: BUILD.bazel  solution.h  test.cc
go/0001/: BUILD.bazel  solution.go  solution_test.go
java/0001/: BUILD.bazel  Main.java  MainTest.java
py/0001/: BUILD.bazel  main.py  test.py
scripts/: cpp_create.py  go_create.py  java_create.py  py_create.py
