module(
    name = "algos-template",
    version = "1.0",
)

# Python rules
bazel_dep(name = "rules_python", version = "0.40.0")

# Go rules
bazel_dep(name = "rules_go", version = "0.46.0", repo_name = "io_bazel_rules_go")

# C++ GoogleTest
bazel_dep(name = "googletest", version = "1.14.0.bcr.1", repo_name = "com_google_googletest")

# Java rules and JUnit
bazel_dep(name = "rules_jvm_external", version = "6.3")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "junit:junit:4.13.2",
    ],
    repositories = [
        "https://repo.maven.apache.org/maven2",
    ],
)
use_repo(maven, "maven")

